# pyproj-multiprocessing-bug-hunt

./: pyproject.toml  script_parallel.py  script_sequential.py
