[tool.poetry]
name = "pyproj-multiprocessing-bug-hunt"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyproj = "==3.2.0"
geopandas = "^0.9.0"
ipython = "^7.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
